--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "3",
     "chart.js": "^2.7.3",
     "chartkick": "^3.0.1",
+    "highcharts": "^7.0.0",
     "jquery": "^3.3.1"
   },
   "devDependencies": {
