--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "chart.js": "^2.7.3",
     "chartkick": "^3.0.1",
     "highcharts": "^7.0.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
