--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "chartkick": "^3.0.1",
     "highcharts": "^7.0.0",
     "jquery": "^3.3.1",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "tablesort": "^5.1.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
